# python-services-monorepo

./: README.md  docker-compose.yml
docker/: Dockerfile.goodbyer  Dockerfile.helloer
goodbyer/: main.py
helloer/: main.py  requirements.txt
shared/: setup.cfg
shared/my_package/: __init__.py
