[metadata]
name = my_shared_package
version = 0.0.0
description = Code shared between services
long_description = file: README.md
maintainer_email = ksaaskil@gmail.com

[options]
include_package_data = True
packages = find:
# install_requires = []

[options.extras_require]
dev =
  black
  pytest
  pylint
  mypy
